<resources>
    <string name="app_name">planificationMobile2</string>
    <string name="title_activity_mon_planning">monPlanning</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="gpm">GPM</string>
    <string name="utilisateur">Utilisateur</string>
    <string name="mote_de_passe">Mote de passe</string>
    <string name="oblier_votre_mot_de_passe">Oblier votre mot de passe ?</string>
    <string name="contactez_nous">Contactez-nous</string>
    <string name="google" />
    <string name="facebook" />
    <string name="twitter" />
    <string name="login">LOGIN</string>
    <string name="item_projet">nom projet</string>
    <string name="statutprojet">statue projet</string>
    <string name="datefinprojet">date fin</string>
    <string name="mon_planning_title"> Mon Planning</string>
    <string name="nouveau_title">Nouveau</string>
    <string name="visualisation_title">Visualisation</string>
    <string name="analyse_title">Analyse</string>

    <string-array name="choisirgrapht">
        <item>difference</item>
        <item>score</item>
    </string-array>
</resources>