<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/nomprojet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/item_projet"
            android:layout_weight="3"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/informationprojet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/information_projet"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/statutprojet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/statutprojet"
            android:layout_weight="3"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/datefinProjet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/datefinprojet"
            android:layout_weight="2"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/planningprojet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/planningprojet"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"/>


    </LinearLayout>

</LinearLayout>
